# temperature-converter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  converter.py  pyproject.toml  requirements.txt  test_converter.py
.github/workflows/: ci.yml
tempconv/: __init__.py  cli.py  converter.py
