[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "temperature-converter"
version = "0.1.0"
description = "A simple utility to convert temperatures between Celsius, Fahrenheit, Kelvin and Rankine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "joacomalagrino" }]
keywords = ["temperature", "celsius", "fahrenheit", "kelvin", "rankine", "converter"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
# `convert` would clash with ImageMagick's binary, so the command is `tempconv`.
tempconv = "cli:main"

[tool.setuptools]
py-modules = ["converter", "cli"]
